# mission-control

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  DESIGN-Intelligent-Flow.md  DESIGN-Notes-Digital-Pen.md  Dockerfile  OlaresManifest.yaml  PWA-GUIDE.md  README.md  SECOND-BRAIN-ROADMAP.md  docker-build.sh  index.html  manifest.json  server.py  sw.js
.github/workflows/: deploy.yml
data/: skills.json  tasks.json  version.json
second-brain/: .gitignore  CLAUDE.md  DEV.md  README.md  README.zh-CN.md  docker-compose.prod.yml  docker-compose.yml  dockerfile  install.sh  package.json
second-brain/.github/workflows/: app-release.yml  build-publish-release.yml  docker-build.yml  windows-test-release.yml
second-brain/app/: index.html  package.json  tailwind.config.js  vite.config.ts
second-brain/app/public/: manifest.json
second-brain/app/src/: App.tsx
second-brain/app/src-tauri/: Cargo.toml  tauri.android.conf.json  tauri.conf.json  tauri.cuda.conf.json  tauri.ios.conf.json
second-brain/app/src-tauri/capabilities/: default.json  desktop.json  mobile.json
second-brain/app/src-tauri/icons/: icon.icns
second-brain/app/src-tauri/src/: lib.rs
second-brain/app/src-tauri/src/desktop/: hotkey.rs  mod.rs  setup.rs  text_selection.rs  tray.rs  window.rs  window_state.rs
second-brain/prisma/: defaultFonts.ts  schema.prisma  seed.ts
second-brain/server/: esbuild.config.ts  index.ts  package.json
second-brain/server/aiServer/: aiModelFactory.ts  index.ts  types.ts
second-brain/server/jobs/: aiScheduledTaskJob.ts  archivejob.ts  baseScheduleJob.ts  dbjob.ts  (+3 more)
second-brain/shared/: package.json
second-brain/test-docker/: README.md  docker-compose.test.yml
(+198 files in other folders)
