[package]
name = "Blinko"
version = "0.1.0"
description = "A Blinko App"
authors = ["blinko-space"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools", "rustls-tls", "tray-icon", "image-png"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-os = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-http = "2"
tauri-plugin-upload = "2"
tauri-plugin-blinko = { path = "../tauri-plugin-blinko/" }
tauri-plugin-process = "2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
tauri-plugin-global-shortcut = "2.0.0"
tauri-plugin-single-instance = "2"
tauri-plugin-autostart = "2"
get-selected-text = "0.1"
arboard = { version = "3", default-features = false }
mouse_position = "0.1"
enigo = "0.3"
rdev = "0.3"
sys-locale = "0.3"

 

[target.'cfg(target_os = "windows")'.dependencies]
tokio = { version = "1", features = ["rt", "rt-multi-thread", "sync"] }



[target.'cfg(target_os = "macos")'.dependencies]
macos-accessibility-client = "0.0.1"
